--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
   "license": "MIT",
   "engines": {
     "atom": ">=1.15.0"
-  }
+  },
+  "repository": "https://github.com/felipecrp/highlight-line-mode"
 }
