--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "engines": {
     "atom": ">=1.15.0"
   },
-  "repository": "git@github.com:felipecrp/atom-highlight-cursor-line.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https@github.com:felipecrp/atom-highlight-cursor-line.git"
+  },
   "homepage": "https://github.com/felipecrp/atom-highlight-cursor-line"
 }
