--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "highligh-cursor-line",
+  "name": "highlight-cursor-line",
   "main": "./lib/index.js",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Highlight every line with a cursor using theme colors",
   "license": "MIT",
   "engines": {
