using https git repo

--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   "engines": {
     "atom": ">=1.15.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/felipecrp/atom-highlight-cursor-line.git"
-  },
+  "repository": "https://github.com/felipecrp/atom-highlight-cursor-line.git",
   "homepage": "https://github.com/felipecrp/atom-highlight-cursor-line"
 }
